2010-12-26  Per Bothner  <per@bothner.com>

	* RuntimeAnnotationsAttr.java (maybeAddAnnotation): New method.
	* AnnotationEntry.java (getRetention, hasTarget): New methods.

2010-12-01  Per Bothner  <per@bothner.com>

	* AnnotationEntry.java: Also implement
	java.lang.reflect.InvocationHandler.
	(invoke): New method.
	(Value.getValue, Value.print): Add/fix support for enums and arrays.
	* RuntimeAnnotationsAttr.java (getAnnotationsAttr, addAnnotation,
	getRuntimeVisibleAnnotations, getRuntimeInvisibleAnnotations):
	New methods.
	(assignConstants, write): Add/fix support for enums and arrays.

2010-12-14  Per Bothner  <per@bothner.com>

	* RuntimeAnnotationsAttr.java (write): Write entry count.
	(assignConstants): Count space needed for entry count.

	* RuntimeAnnotationsAttr.java (write): Add missing break statement.

	* RuntimeAnnotationsAttr.java (assignConstants): String annotation
	value uses a UTF8 constant, not a String constant.

2010-12-01  Per Bothner  <per@bothner.com>

	* AnnotationDefaultAttr.java: New class, extends Attribute.
	* Makefile.am: Update accordingly.
	* ClassFileInput.java (readAttribute): Read AnnotationDefault attribute.
	* RuntimeAnnotationsAttr.java (write, assignConstants): Change to
	static, so they can be called from AnnotationDefaultAttr.
	* AnnotationEntry.java (print): Use printQuoteString for strings.

2010-11-29  Per Bothner  <per@bothner.com>

	Aim for complete support for Annotations.
	* AttrContainer.java (getConstants): New method.
	* Attribute.java (getConstants): New method.
	* Field.java (getConstants): New method.
	* ClassTypeWriter.java (printOptionalIndex): Skip if index is <= 0.
	* AnnotationEntry.java (Value): New member class.
	Add partial javax.lang.model.AnnotationValue support.
	Add support for printing AnnotationEntry and Value instances.
	* RuntimeAnnotationsAttr.java: Add support for parsing, generating,
	and printing Annotation attributes.
	Split support for printing RuntimeAnnotationsAttr into separate