@@ -1,3 +1,7 @@
+2011-01-03  Per Bothner  <per@bothner.com>
+
+	* ClassType.java (getDefaultConstructor): New method.
+
 2010-12-26  Per Bothner  <per@bothner.com>
 
 	* RuntimeAnnotationsAttr.java (maybeAddAnnotation): New method.
